add localization to menu heading

--- a/src/main/resources/message_uk.properties
+++ b/src/main/resources/message_uk.properties
@@ -1,3 +1,4 @@
+menu.main.title = \u0413\u043E\u043B\u043E\u0432\u043D\u0435 \u043C\u0435\u043D\u044E
 menu.main.header = \u0417\u0430\u043B\u0456\u0437\u043D\u0438\u0447\u043D\u0438\u0439 \u043E\u0444\u0456\u0441
 menu.main.your_tickets = \u0412\u0430\u0448\u0456 \u043A\u0432\u0438\u0442\u043A\u0438
 menu.main.your_balance = \u0412\u0430\u0448 \u0431\u0430\u043B\u0430\u043D\u0441
